test/fail/struct_method_missing_body.m8
ᛋBroken᛬
ᛵ
    ᛃempty᛬ᚮᚭ᛬ᛰ᛬
ᛵ
